<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/white1"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:id="@+id/first"
            app:hintTextAppearance="@color/BtnRest">

            <EditText
                android:id="@+id/bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusForward="@+id/date"
                android:hint="@string/billno"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp">

            <EditText
                android:id="@+id/date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:nextFocusDown="@+id/name"
                android:hint="@string/date"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/cont"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/treat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/treat"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/amount"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp">
        <EditText
            android:id="@+id/chem"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:hint="@string/chem"
            android:inputType="number"
            android:layout_alignParentStart="true"
            android:nextFocusDown="@+id/trav"
            android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp">

            <EditText
                android:id="@+id/trav"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:hint="@string/trav"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp" />
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardElevation="2dp">

            <Button
                android:id="@+id/btnsub"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Btn"
                android:background="@drawable/button_state_change"
                android:onClick="sendMessage" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
